# Registration

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  RegistrationConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CloudStorage/: CMakeLists.txt  CloudStorage.cpp  CloudStorage.hpp
src/Components/CloudStorageLUM/: CMakeLists.txt  CloudStorageLUM.cpp  CloudStorageLUM.hpp
src/Components/CorrespondenceEstimation/: CMakeLists.txt  CorrespondenceEstimation.cpp  CorrespondenceEstimation.hpp
src/Components/CorrespondenceViewer/: CMakeLists.txt  CorrespondenceViewer.cpp  CorrespondenceViewer.hpp
src/Components/PairwiseRegistration/: CMakeLists.txt  PairwiseRegistration.cpp  PairwiseRegistration.hpp
src/Types/: CMakeLists.txt  CorrespondanceEstimationKAZE.hpp  CorrespondanceEstimationSIFT.hpp  CorrespondenceEstimationColor.hpp
src/scripts/: crossTimesMatrix.m  estimateRigidTransform.m  left_wide_system_calibration.py  quat2rot.m  rpy.m
tasks/: .blad_kata_fi.txt  .blad_odleglosci.txt  .blad_translacji.txt  .output.txt  CloudXYZRGBSIFTCorresponcendesCollector.xml  CloudXYZRGBSIFTCorrespondencesViewer.xml  CloudXYZRGBSIFTLUMCollector.xml  CloudXYZRGBSIFTSequenceViewer.xml  CloudXYZRGBSequenceViewer.xml  KinectRGBDRainbowViewer.xml  LeftWideSetupCalibration.xml  LeftWideSetupCalibrationCirclesGrid.xml  RGBDSequenceObjectFragmentColector.xml  RGBDSequenceObjectFragmentCollector.xml  RGBDSequenceObjectFragmentExtractor.xml  RGBDSequenceObjectFragmentExtractor_test.xml  RGBDSequenceSOMCollector.xml  RGBDSequenceSOMCollectorKAZE.xml  record.txt  (+12 more)
(+1 files in other folders)
